--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/vcs.xml
 .DS_Store
 /build
 /captures
@@ -206,3 +207,4 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+.idea/
